# ncs-unity-example-test

./: .gitignore  CMakeLists.txt  README.md  prj.conf  run.sh  test_run.sh  testcase.yaml
src/: main.c
src/foo/: foo.c
src/uut/: uut.c
src/uut/tests/: CMakeLists.txt  example_test.c
tests/: prj_test.conf  test_main.c
tests/foo/: CMakeLists.txt  testcase.yaml
tests/foo/src/: foo_test.c
tests/uut/: CMakeLists.txt  testcase.yaml
tests/uut/src/: uut_test.c  uut_test.h
